<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
      <artifactId>radargun-plugin-parent</artifactId>
      <groupId>org.radargun</groupId>
      <version>3.0.0-SNAPSHOT</version>
   </parent>

   <properties>
      <java.version>11</java.version>
      <maven.compiler.source>${java.version}</maven.compiler.source>
      <maven.compiler.target>${java.version}</maven.compiler.target>
      <argLine>--add-modules java.xml.bind,jdk.incubator.httpclient,java.base</argLine>
      <additionalRuntimeArgLine>
         --add-modules=java.xml.bind,jdk.incubator.httpclient,java.base
      </additionalRuntimeArgLine>
   </properties>

   <build>
      <plugins>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.8.0</version>
            <configuration>
               <source>11</source>
               <target>11</target>
               <encoding>UTF-8</encoding>
               <!--<compilerArgs>-->
                  <!--<arg>&#45;&#45;add-exports</arg>-->
                  <!--<arg>&#45;&#45;add-modules=java.xml.bind,jdk.incubator.httpclient,java.base</arg>-->
                  <!--<arg>java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED</arg>-->
                  <!--<arg>&#45;&#45;add-exports java.xml.bind,jdk.incubator.httpclient,java.base</arg>-->
                  <!--<arg>java.base/jdk.internal.reflect=ALL-UNNAMED</arg>-->
               <!--</compilerArgs>-->
            </configuration>
         </plugin>
      </plugins>
   </build>

   <modelVersion>4.0.0</modelVersion>
   <name>HTTP/2 client</name>
   <artifactId>plugin-rest-http2</artifactId>

   <dependencies>
      <dependency>
         <groupId>org.radargun</groupId>
         <artifactId>radargun-cache</artifactId>
         <version>${project.version}</version>
         <scope>provided</scope>
      </dependency>
      <dependency>
         <groupId>org.radargun</groupId>
         <artifactId>radargun-rest</artifactId>
         <version>${project.version}</version>
      </dependency>
   </dependencies>

</project>
